--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r req.txt
+          pip install bandit safety
 
-      - name: Run DevOps.py
+      - name: Run Bandit (Python Security Scan)
         run: |
-          python DevOps.py
+          bandit -r . -lll
+
+      - name: Run Safety (Dependency Vulnerability Check)
+        run: |
+         safety check --full-report
