Audit Added to Project

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,8 @@ jobs:
       - name: Run Safety (Dependency Vulnerability Check)
         run: |
          safety check --full-report
+      
+      - name: Run pip-audit for dependency vulnerabilities
+        run: |
+          pip install pip-audit
+          pip-audit -r req.txt
